--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="page-header">
@@ -15,17 +16,17 @@
         </button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-             <li class="site-list__item site-list__item--active">
-               <a>
-                 Главная
-               </a>
-             </li>
-             <li class="site-list__item">
-               <a href="photo.html">
-                 Фотографии
-               </a>
-             </li>
-             <li class="site-list__item">
+            <li class="site-list__item site-list__item--active">
+              <a>
+                Главная
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a href="photo.html">
+                Фотографии
+              </a>
+            </li>
+            <li class="site-list__item">
               <a href="contest.html">
                 Конкурс
               </a>
