--- a/source/index.html
+++ b/source/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="page-header">
@@ -15,17 +16,17 @@
         </button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-             <li class="site-list__item site-list__item--active">
-               <a>
-                 Главная
-               </a>
-             </li>
-             <li class="site-list__item">
-               <a href="photo.html">
-                 Фотографии
-               </a>
-             </li>
-             <li class="site-list__item">
+            <li class="site-list__item site-list__item--active">
+              <a>
+                Главная
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a href="photo.html">
+                Фотографии
+              </a>
+            </li>
+            <li class="site-list__item">
               <a href="contest.html">
                 Конкурс
               </a>
@@ -45,73 +46,73 @@
         <div class="page-main__header-wrapper">
           <header class="page-main__header">
             <h2 class="title">Взгляните на жизнь<br>
-               иначе!</h2>
-           <div class="page-main__header-download">
-             <button class="page-main__download" type="button">Скачать приложение</button>
-             <ul class="page-main__list main-list">
-               <li class="main-list__item">
-                 <a class="main-item__logo">
-                   <img class="main-item__logo-image" src="img/apple-logo.svg" width="47" height="56" alt="apple-logo">
-                 </a>
-               </li>
-               <li class="main-list__item">
-                 <a class="main-item__logo">
-                   <img class="main-item__logo-image" src="img/android-logo.svg" width="43" height="47" alt="android-logo">
-                 </a>
-               </li>
-               <li class="main-list__item">
-                 <a class="main-item__logo">
-                   <img class="main-item__logo-image" src="img/microsoft-logo.svg" width="44" height="41" alt="microsoft-logo">
-                 </a>
-               </li>
-             </ul>
-             <p>Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-           </div>
+              иначе!</h2>
+            <div class="page-main__header-download">
+              <button class="page-main__download" type="button">Скачать приложение</button>
+              <ul class="page-main__list main-list">
+                <li class="main-list__item">
+                  <a class="main-item__logo">
+                    <img class="main-item__logo-image" src="img/apple-logo.svg" width="47" height="56" alt="apple-logo">
+                  </a>
+                </li>
+                <li class="main-list__item">
+                  <a class="main-item__logo">
+                    <img class="main-item__logo-image" src="img/android-logo.svg" width="43" height="47" alt="android-logo">
+                  </a>
+                </li>
+                <li class="main-list__item">
+                  <a class="main-item__logo">
+                    <img class="main-item__logo-image" src="img/microsoft-logo.svg" width="44" height="41" alt="microsoft-logo">
+                  </a>
+                </li>
+              </ul>
+              <p>Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+            </div>
           </header>
         </div>
       </section>
       <section class="proposal">
         <div class="proposal__wrapper">
-         <h2 class="visually-hidden">Наши предложения</h2>
-         <div class="proposal__stats">
-           <p class="proposal__text">
-             Устали от серости<br>
-             мегаполиса?
-           </p>
-           <p class="proposal__text">
-            Нам есть, что вам<br>
-            предложить!
-          </p>
-         </div>
-         <ul class="proposal__list">
-           <li class="proposal__item">
-             <h3 class="proposal__title">Поднимает настроение</h3>
-             <p class="proposal__description">
-               Приложение позволит вам победить<br>
-               осеннюю хандру и депрессию<br>
-               буквально в несколько кликов!
-             </p>
-           </li>
-           <li class="proposal__item">
-             <h3 class="proposal__title">Меняет мир вокруг</h3>
-             <p class="proposal__description">
+          <h2 class="visually-hidden">Наши предложения</h2>
+          <div class="proposal__stats">
+            <p class="proposal__text">
+              Устали от серости<br>
+              мегаполиса?
+            </p>
+            <p class="proposal__text">
+              Нам есть, что вам<br>
+              предложить!
+            </p>
+          </div>
+          <ul class="proposal__list">
+            <li class="proposal__item">
+              <h3 class="proposal__title">Поднимает настроение</h3>
+              <p class="proposal__description">
+                Приложение позволит вам победить<br>
+                осеннюю хандру и депрессию<br>
+                буквально в несколько кликов!
+              </p>
+            </li>
+            <li class="proposal__item">
+              <h3 class="proposal__title">Меняет мир вокруг</h3>
+              <p class="proposal__description">
                 Сделайте снимок и украсте его<br>
                 смайликом или текстовой подписью,<br>
                 чтобы усилить эффект
-             </p>
-           </li>
-           <li class="proposal__item">
-             <h3 class="proposal__title">Заводит новых друзей</h3>
-             <p class="proposal__description">
-               Ставьте лайки, комментируйте,<br>
-               делитесь фотографиями с друзьями и<br>
-               заводите новых
-             </p>
-           </li>
-           <!--<p class="proposal__description proposal__description-iphone">
-             <img class="proposal-descriptions__image" src="img/iphone-3.png" width="157" height="320" alt="iphone">
-           </p>-->
-         </ul>
+              </p>
+            </li>
+            <li class="proposal__item">
+              <h3 class="proposal__title">Заводит новых друзей</h3>
+              <p class="proposal__description">
+                Ставьте лайки, комментируйте,<br>
+                делитесь фотографиями с друзьями и<br>
+                заводите новых
+              </p>
+            </li>
+            <!--<p class="proposal__description proposal__description-iphone">
+              <img class="proposal-descriptions__image" src="img/iphone-3.png" width="157" height="320" alt="iphone">
+            </p>-->
+          </ul>
         </div>
       </section>
       <section class="research">
@@ -138,9 +139,9 @@
             <blockquote class="reviews__item slider__item">
               <div class="reviews__author-info">
                 <p class="reviews__text">
-                 «Это приложение перевернуло мой мир и позволило по-новому взглянуть на<br>
-                 привычные серые вещи! А еще я познакомился со своей будущей женой в<br>
-                 комментариях к выложенной фотографии!»
+                  «Это приложение перевернуло мой мир и позволило по-новому взглянуть на<br>
+                  привычные серые вещи! А еще я познакомился со своей будущей женой в<br>
+                  комментариях к выложенной фотографии!»
                 </p>
                 <cite class="reviews__author-name">Николай Петров</cite>
                 <p class="reviews__text">25 лет,водитель трамвая</p>
@@ -149,7 +150,7 @@
             <blockquote class="reviews__item slider__item">
               <div class="reviews__author-info">
                 <p class="reviews__text">
-                 «Я нашел много новых друзей! Спасибо вам за приложение.»
+                  «Я нашел много новых друзей! Спасибо вам за приложение.»
                 </p>
                 <cite class="reviews__author-name">Алексей Гулящий</cite>
                 <p class="reviews__text">20 лет, менеджер</p>
@@ -158,7 +159,7 @@
             <blockquote class="reviews__item slider__item">
               <div class="reviews__author-info">
                 <p class="reviews__text">
-                 «Очень хорошее приложение! Рекомендую всем! Много ярких впечатлений!»
+                  «Очень хорошее приложение! Рекомендую всем! Много ярких впечатлений!»
                 </p>
                 <cite class="reviews__author-name">Владимир Рыбкин</cite>
                 <p class="reviews__text">32 года, полицейский</p>
@@ -166,12 +167,12 @@
             </blockquote>
             <button class="reviews__prev" type="button">Предыдущий отзыв</button>
             <button class="reviews__next" type="button">Следующий отзыв</button>
-         </div>
-         <p class="reviews__toggles">
-          <button class="slider__toggle slider__toggle--current" type="button">1</button>
-          <button class="slider__toggle" type="button">2</button>
-          <button class="slider__toggle" type="button">3</button>
-        </p>
+          </div>
+          <p class="reviews__toggles">
+            <button class="slider__toggle slider__toggle--current" type="button">1</button>
+            <button class="slider__toggle" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </p>
         </div>
       </section>
       <section class="tariff">
