--- a/source/form.html
+++ b/source/form.html
@@ -8,38 +8,41 @@
   </head>
   <body class="page__body">
     <header class="page-header">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/pink.svg" width="74" height="23" alt="Пинк">
-      </a>
-      <nav class="main-nav">
-        <button class="main-nav__toogle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
-              <a>
-                Главная
-              </a>
-            </li>
-            <li class="site-list__item">
-              <a href="photo.html">
-                Фотографии
-              </a>
-            </li>
-            <li class="site-list__item">
-              <a href="contest.html">
-                Конкурс
-              </a>
-            </li>
-            <li class="site-list__item">
-              <a href="#">
-                HTML Academy
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <div class="page-header__wrapper">
+        <a class="page-header__logo">
+          <!--<img src="img/logotype-white-tablet.svg" width="145" height="40" alt="логотип очки">-->
+          <img class="page-header__logo-image" src="img/pink.svg" width="74" height="23" alt="Пинк">
+        </a>
+        <nav class="main-nav">
+          <button class="main-nav__toogle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list site-list">
+              <li class="site-list__item site-list__item--active">
+                <a href="index.html">
+                  Главная
+                </a>
+              </li>
+              <li class="site-list__item">
+                <a href="photo.html">
+                  Фотографии
+                </a>
+              </li>
+              <li class="site-list__item">
+                <a href="contest.html">
+                  Конкурс
+                </a>
+              </li>
+              <li class="site-list__item">
+                <a href="#">
+                  HTML Academy
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
     <main class="page-main main-forms">
       <section class="contest">
@@ -53,21 +56,21 @@
         <div class="forms__wrapper">
           <form class="traveling__forms" action="https://echo.htmlacademy.ru" method="POST">
             <h2 class="visually-hidden">Заполните форму</h2>
-            <p>Поделитесь своей историей и получите шанс выиграть
+            <p class="traveling-action">Поделитесь своей историей и получите шанс выиграть
               ценный приз — 1000 миль на вашу бонусную карту!
               Пожалуйста, заполните форму ниже:
             </p>
             <div class="contest-forms__information names">
               <p>
-                <label class="username" for="surname">фамилия:</label>
+                <label class="username" for="surname">фамилия:</label><br>
                 <input class="surname-icon-user" id="surname" type="text" name="user-surname" placeholder="Укажите фамилию*">
               </p>
               <p>
-                <label class="username" for="first-name">имя:</label>
+                <label class="username" for="first-name">имя:</label><br>
                 <input class="first-name-icon-user" id="first-name" type="text" name="your-name" placeholder="Введите ваше имя*">
               </p>
               <p>
-                <label class="username" for="patronymic">отчество:</label>
+                <label class="username" for="patronymic">отчество:</label><br>
                 <input class="patronymic-icon-user" id="patronymic" type="text" name="your-middle-name" placeholder="Ну и отчество тоже">
               </p>
             </div>
