--- a/source/index.html
+++ b/source/index.html
@@ -29,7 +29,7 @@
                 </a>
               </li>
               <li class="site-list__item">
-                <a href="contest.html">
+                <a href="form.html">
                   Конкурс
                 </a>
               </li>
