--- a/source/index.html
+++ b/source/index.html
@@ -135,21 +135,18 @@
           </ul>
         </div>
       </section>
-      <section class="research visually-hidden">
+      <section class="research">
         <div class="research__wrapper">
           <h2 class="research__title">
-            Эффект<br>
-            на 24 часа!
+            Эффект на 24 часа!
           </h2>
-          <div class="research__list">
-            <p class="research__item">
-              Британские ученые провели исследования<br>
-              и докозали, что положительный эффект<br>
-              от использования приложения длится<br>
-              целые сутки!
-            </p>
-            <a class="research__larger" href="#">Узнать больше об исследовании</a>
-          </div>
+          <p class="research__item">
+            Британские ученые провели исследования
+            и докозали, что положительный эффект
+            от использования приложения длится
+            целые сутки!
+          </p>
+          <a class="research__larger" href="#">Узнать больше об исследовании</a>
         </div>
       </section>
       <section class="reviews">
@@ -158,31 +155,37 @@
           <div class="reviews__list slider__list">
             <blockquote class="reviews__item slider__item">
               <div class="reviews__author-info">
-                <p class="reviews__text">
-                  «Это приложение перевернуло мой мир и позволило по-новому взглянуть на<br>
-                  привычные серые вещи! А еще я познакомился со своей будущей женой в<br>
-                  комментариях к выложенной фотографии!»
-                </p>
                 <cite class="reviews__author-name">Николай Петров</cite>
-                <p class="reviews__text visually-hidden">25 лет,водитель трамвая</p>
+                <p class="reviews-text__author">25 лет,водитель трамвая</p>
+                <div class="reviews-text__wrapper">
+                  <p class="reviews__text">
+                    «Это приложение перевернуло мой мир и позволило по-новому взглянуть на
+                    привычные серые вещи! А еще я познакомился со своей будущей женой в
+                    комментариях к выложенной фотографии!»
+                  </p>
+                </div>
               </div>
             </blockquote>
             <blockquote class="reviews__item slider__item visually-hidden">
               <div class="reviews__author-info">
-                <p class="reviews__text">
-                  «Я нашел много новых друзей! Спасибо вам за приложение.»
-                </p>
                 <cite class="reviews__author-name">Алексей Гулящий</cite>
-                <p class="reviews__text">20 лет, менеджер</p>
+                <p class="reviews-text__author">20 лет, менеджер</p>
+                <div class="reviews-text__wrapper">
+                  <p class="reviews__text">
+                    «Я нашел много новых друзей! Спасибо вам за приложение.»
+                  </p>
+                </div>
               </div>
             </blockquote>
             <blockquote class="reviews__item slider__item visually-hidden">
               <div class="reviews__author-info">
-                <p class="reviews__text">
-                  «Очень хорошее приложение! Рекомендую всем! Много ярких впечатлений!»
-                </p>
                 <cite class="reviews__author-name">Владимир Рыбкин</cite>
-                <p class="reviews__text">32 года, полицейский</p>
+                <p class="reviews-text__author">32 года, полицейский</p>
+                <div class="reviews-text__wrapper">
+                  <p class="reviews__text">
+                    «Очень хорошее приложение! Рекомендую всем! Много ярких впечатлений!»
+                  </p>
+                </div>
               </div>
             </blockquote>
             <button class="reviews__prev visually-hidden" type="button">Предыдущий отзыв</button>
